[package]
name = "robot_algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
nalgebra = {version = "0.32.2", default-features = false, features = [ "alloc" ]}

[dev-dependencies]
image = "0.24.5"
plotters = {git = "https://github.com/plotters-rs/plotters"}

[features]
no_std = [ "nalgebra/libm"]
std = ["nalgebra/std", "nalgebra/macros"]
default = ["std"]
